# Alpackage

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  doxygen  load
bench/: CMakeLists.txt
bench/Data/: PrefixTree.cpp  RadixTree.cpp
benchmarks/: strings.txt
cmake/: CodeCoverage.cmake
exec/: main.cpp
ext/modules/: CMakeLists.txt
ext/modules/git/: CMakeLists.txt
ext/modules/git/src/: Config.cpp  Config.hpp  GitModule.cpp  GitRepo.cpp  GitRepo.hpp  SSHKeys.hpp  Shell.cpp  Shell.hpp
ext/modules/git/test/: Load.cpp
ext/modules/textdb/: CMakeLists.txt
ext/modules/textdb/src/: Config.hpp  Logging.hpp  TextDbModule.cpp
ext/modules/textdb/test/: Config.cpp  Load.cpp
include/Alpackage/: Package.hpp
include/Alpackage/Module/: Module.hpp  ModuleLoader.hpp
include/Alpackage/Util/: ConfLine.hpp  EntryReader.hpp  FileUtils.hpp  Logging.hpp
include/Kal/: Action.hpp  ActionConsumer.hpp  ActionProvider.hpp  ErrorOr.hpp  Flag.hpp  Format.hpp  FreeLater.hpp  Option.hpp  StringBuilder.hpp  Symbol.hpp  UnrecoverableError.hpp  Variant.hpp  XDGBaseDir.hpp  default.hpp
include/Kal/Concepts/: Applicators.hpp  Collection.hpp  Comparators.hpp  Construction.hpp  Functional.hpp  Iterator.hpp  Optional.hpp  Primitive.hpp  Stream.hpp  Type.hpp  TypeConversion.hpp  Value.hpp
include/Kal/Concepts/detail/: aggregate.hpp  comparison.hpp  filter.hpp  forall.hpp  foreach.hpp  lift.hpp  map.hpp  mkString.hpp  unique.hpp  zip.hpp
include/Kal/Data/: PrefixTree.hpp  RadixTree.hpp
include/Kal/Iterators/: KeepIterator.hpp  MergeIterator.hpp
include/Kal/View/: Applicators.hpp
include/Kal/View/detail/: mkString.hpp
src/: Action.cpp  CMakeLists.txt  ModuleLoader.cpp  Package.cpp  StringBuilder.cpp
src/Util/: Logging.cpp
test/: CMakeLists.txt  ConfLine.cpp  EntryReader.cpp  Flag.cpp  ModuleErrorOr.cpp  ModuleLoader.cpp  Option.cpp  Option.hpp  Package.cpp  PrefixTree.cpp  RadixTree.cpp  XDGBaseDir.cpp
test/Concepts/: Aggregate.cpp  Filter.cpp  Foreach.cpp  Map.cpp  MkString.cpp  Unique.cpp  Unique.hpp  Unq.cpp
test/Views/: MkString.cpp
